# datapi

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: __init__.py  database.py  models.py
