[tool.poetry]
name = "datapi"
packages = [
    { include = "app" }
]
version = "0.1.0"
description = "Data API server for Tom.Camp"
authors = ["Tom Camp <tomcamp@protonmail.ch>"]
readme = "README.md"
repository = "https://github.com/Tom-Camp/datapi"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.5"
uvicorn = {extras = ["standard"], version = "^0.32.1"}
pydantic = "^2.10.1"
python-dotenv = "^1.0.1"
sqlmodel = "^0.0.22"
pathlib = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
